tests/reference/asr-generics_array_02-22c8dc1.stderr
semantic error: Type mismatch in binary operator; the types must be compatible
 --> tests/../integration_tests/generics_array_02.py:4:12
  |
4 |     return a + b
  |            ^   ^ type mismatch (T and T)
